--- a/config/grafana.kanopy-platform.github.io_provisioneddashboards.yaml
+++ b/config/grafana.kanopy-platform.github.io_provisioneddashboards.yaml
@@ -36,14 +36,13 @@ spec:
             properties:
               config:
                 type: string
-              folderID:
+              folderRef:
                 type: string
-              orgID:
+              namespace:
                 type: string
             required:
             - config
-            - orgID
+            - namespace
             type: object
         type: object
     served: true
-...
