--- a/config/grafana.kanopy-platform.github.io_provisionedfolders.yaml
+++ b/config/grafana.kanopy-platform.github.io_provisionedfolders.yaml
@@ -38,11 +38,11 @@ spec:
                 type: string
               folderTitle:
                 type: string
-              providerConfigName:
+              namespace:
                 type: string
             required:
             - folderTitle
-            - providerConfigName
+            - namespace
             type: object
         type: object
     served: true
