make accessMode optional, align composition and endorced composition

--- a/config/grafana.kanopy-platform.github.io_provisioneddatasources.yaml
+++ b/config/grafana.kanopy-platform.github.io_provisioneddatasources.yaml
@@ -6,7 +6,7 @@ metadata:
   name: provisioneddatasources.grafana.kanopy-platform.github.io
 spec:
   enforcedCompositionRef:
-    name: provisioneddatasource
+    name: provisioneddatasources
   group: grafana.kanopy-platform.github.io
   names:
     kind: ProvisionedDataSource
@@ -73,7 +73,6 @@ spec:
               url:
                 type: string
             required:
-            - accessMode
             - name
             - namespace
             - type
